--- a/.github/workflows/multi_nim.yml
+++ b/.github/workflows/multi_nim.yml
@@ -1,8 +1,6 @@
 name: Daily
 on:
-  schedule:
-    - cron: "30 6 * * *"
-  workflow_dispatch:
+  push:
 
 jobs:
   delete-cache:
@@ -27,7 +25,8 @@ jobs:
             cpu: amd64
           #- os: windows
             #cpu: i386
-        branch: [version-1-2, version-1-6, devel]
+        #branch: [version-1-2, version-1-6, devel]
+        branch: [devel]
         include:
           - target:
               os: linux
